# training-data-analyst

./: .gitignore  .gitmodules  CODEOWNERS  CONTRIBUTING  CONTRIBUTING.md  README.md  abc.txt  flights_data_analysis  learning_rate.ipynb  temp.py  test-notebook.ipynb  test_commit.txt
CPB100/lab2a/: commands.sh
CPB100/lab2b/: commands.sh  ingest.sh  install_missing.sh  transform.py
CPB100/lab3a/: README.md  authorize_cloudshell.sh
CPB100/lab3b/: authorize_dataproc.sh
CPB100/lab4a/: .gitignore  demandforecast.ipynb  demandforecast2.ipynb  trained_model.proto  trained_model.sd  trained_model.txt
CPB100/lab4c/: mlapis.ipynb
CPB100/labA2a/: weather_delay_queries.txt
CPB100/labA2b/: airports.csv
CPB101/lab1a/: weather_delay_queries.txt
CPB101/lab1b/: commands.txt
CPB101/lab2/: create_mvn.sh
CPB102/diagrams/: cpb102diagrams.ipynb
CPB102/lab1a/: create_datasets.ipynb  taxi-test.csv  taxi-train.csv  taxi-valid.csv
CPB102/lab2a/: tflearn.ipynb
CPB102/lab2b/: tfclassic.ipynb  train.py
CPB102/lab2c/: .gitignore  monitoring.ipynb  on_big_data.ipynb  tflayers.ipynb
CPB102/lab3a/: .gitignore  cloudml.ipynb  get_service_account.sh  sdsoln.ipynb  tftransform.ipynb
CPB102/lab4a/: .gitignore  feateng-fullds.ipynb  feateng.ipynb  tftransform.ipynb
CPB102/lab4b/: hyperparam.ipynb
CPB102/lab4c/: fullds.ipynb
CPB103/: BigQuery-test-solution.ipynb  alice-short-transformed.txt  lab2a.py  pet-details.pig  pet-details.txt  pets.txt
CPB104/explore/: queries.txt
CPB104/fromSHRP/: ingest.sh  to_messages.py
CPB104/process/: HOWTO
CPB104/publish/: .gitignore  README.txt  send_sensor_data.py
Certification Journey/: Readme.md
Certification_Journey_Team/: Readme.md
Google Cloud Certification Journey /Data-Analyst/: Info.txt
blogs/: en.md  next-1.md
blogs/babyweight/: .gitignore  babyweight.ipynb  preproc_tft.ipynb  train_deploy.ipynb
blogs/babyweight_keras/: README.md  babyweight.ipynb
blogs/babyweight_tft/: README.md  babyweight_tft_keras_01.ipynb  babyweight_tft_keras_02.ipynb
blogs/batch_normalization/: estimator_batch_normalization.ipynb
blogs/batch_predictions/: batch_predictions_keras.ipynb
blogs/beamadvent/: .gitignore  backup.py  day1_input.txt  day1a.py  day1b.py  day2_input.txt  day2a.py  day2b.py  day3_input.txt  day3a.py  day3b.py
blogs/bigquery_datascience/: .gitignore  README.md  bigquery_datascience.ipynb  bigquery_tensorflow.ipynb
blogs/bitcoin_network/: total_flows.csv  transactions.csv  visualizing_the_10000_pizza_bitcoin_network.ipynb
blogs/bqml/: online_prediction.ipynb  taxifare_bqml.ipynb
blogs/covid-19/: mapping-covid-19.ipynb
blogs/dataflowsql/: bq_extract.sh  create_mvn.sh  mvn_exec.sh  query.txt
blogs/df_linear_opt/: .gitignore  generate_input.py  install_packages.sh  linearopt.py
blogs/endpointslambda/: Apache2_0License.txt  README.md  lambdafunctioninline.py
blogs/explainable_ai/: AI_Explanations_on_CAIP.ipynb  README.md
blogs/feature_column_normalization/: README.md  feature_normalization.ipynb
blogs/form_parser/: formparsing.ipynb  request.json  request.sh  response.json
blogs/gcloudprojects/: create_projects.sh  delete_projects.sh  iam.json.new  iam.json.orig
blogs/gcp_forecasting/: README.md  gcp_time_series_forecasting.ipynb  scalable_time_series.py  time_series.py
blogs/ghcn/: ghcn_on_bq.ipynb
blogs/goes16/: README.md  create_subscription.sh  delete_subscription.sh  message.txt  pom.xml  pull_message.sh
blogs/housing_prices/: cloud-ml-housing-prices-hp-tuning.ipynb  cloud-ml-housing-prices.ipynb
blogs/hparam/: hyperparam.yaml  setup.py  submit_job.sh
blogs/inference/: README.md  bq_col_names.txt  bq_to_json.sh  create_dataset.sh  create_key.json  delete_dataset.sh  delete_key.json  list_datasets.sh  query_dataset.sh
blogs/integrated_gradients/: README.md
blogs/landsat/: .gitignore  dfndvi.py  install_ee.sh  install_packages.sh  ndvi.py  run_oncloud.sh  setup.py  upload_ee.sh  (+1 more)
blogs/landsat-ml/: .gitignore  confusion.py  create_downscaled.py  landcover.ipynb  predict.py  preprocess.py  purepython.py
dataflow_r/: create_mvn.sh
datalab/: .gitignore  create_vm.sh  datalab.yaml  instance_details.sh  start_datalab.sh  start_tunnel.sh
doc/: README.md
fast-and-lean-data-science/: 01_MNIST_TPU.ipynb  05_MNIST_Estimator_Tensorboard_solution.ipynb  07_Keras_Flowers_TPU_solution.ipynb
self-paced-labs/agents/build-multi-agent-system/multi-agent-system-starter/agents/orchestrator/: agent.py  pyproject.toml
self-paced-labs/agents/build-multi-agent-system/multi-agent-system-starter/app/: Dockerfile  __init__.py  pyproject.toml
self-paced-labs/agents/build-multi-agent-system/multi-agent-system-starter/app/frontend/: style.css
self-paced-labs/agents/secure-agent-egress-gateway/src/mortgage-agent/: deploy_agent.py  pyproject.toml
self-paced-labs/agents/secure-agent-egress-gateway/src/mortgage-agent/agent/: agent.py  tools.py
self-paced-labs/agents/secure-agent-egress-gateway/src/mortgage-agent/tests/: test_tools.py
self-paced-labs/build-multi-agent-system/multi-agent-system-starter/: .env.example  deploy.sh  init.sh  pyproject.toml
self-paced-labs/build-multi-agent-system/multi-agent-system-starter/agents/content_builder/: agent.py
self-paced-labs/build-multi-agent-system/multi-agent-system-starter/agents/judge/: agent.py
self-paced-labs/build-multi-agent-system/multi-agent-system-starter/agents/orchestrator/: __init__.py  run.sh
self-paced-labs/build-multi-agent-system/multi-agent-system-starter/agents/researcher/: adk_app.py  agent.py
self-paced-labs/build-multi-agent-system/multi-agent-system-starter/app/frontend/: app.js  index.html
self-paced-labs/build-multi-agent-system/multi-agent-system-starter/shared/: authenticated_httpx.py
(+5820 files in other folders)
